[package]
name = "enchantment_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastnbt = "2"
fastanvil = "0.31"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10"